<resources>
    <!-- globals -->
    <string name="main_app_name">main</string>

    <string name="main_title_home">首页</string>
    <string name="main_title_discover">发现</string>
    <string name="main_title_customization">定制</string>
    <string name="main_title_shopping_cart">购物车</string>
    <string name="main_title_mine">我的</string>

    <string name="main_title_splash_logo">乐乐定制</string>
    <string name="main_label_splash_skip">跳过%ds</string>

    <string name="main_label_back">返回</string>
    <string name="main_label_scan_code">扫码</string>
    <string name="main_label_album">相册</string>
    <string name="main_toast_permission_camera">请打开相机权限</string>
    <string name="main_toast_permission_sd">请打开SD卡权限</string>
    <string name="main_toast_scan_fail">二维码识别失败</string>

    <string name="main_button_custom">立即定制</string>

    <string name="main_label_hot_search">热门搜索</string>
    <string name="main_label_recent_search">最近搜索</string>
</resources>
