<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/main_btn_nav_home"
        android:title="@string/main_title_home" />

    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/main_btn_nav_discover"
        android:title="@string/main_title_discover" />

    <item
        android:id="@+id/navigation_custom"
        android:icon="@drawable/main_btn_nav_custom"
        android:title="@string/main_title_customization" />

    <item
        android:id="@+id/navigation_shopping_cart"
        android:icon="@drawable/main_btn_nav_shopping_cart"
        android:title="@string/main_title_shopping_cart" />

    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/main_btn_nav_mine"
        android:title="@string/main_title_mine" />

</menu>
